# cube8

./: Cargo.toml  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/oo8/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  input.dart  main.dart  relay.dart
lib/db/: native.dart  shared.dart  shared.g.dart
lib/ext/: event.dart  storage.dart
lib/models/: app.dart  event.dart  repo.dart  user.dart
lib/utils/: linkify.dart
lib/widgets/: clock.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: lib.rs  main.rs
test/: widget_test.dart
web/: index.html  launch.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
