[package]
name = "oo8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr = "0.11"
tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"]}


[lib]
crate-type = ["cdylib", "rlib"]